# xalg

./: ChangeLog.md  README.md  stack.yaml  xalg.cabal
src/: XAlg.hs
src-ex/: Main.hs
src/XAlg/: Examples.hs
src/XAlg/Console/: Environment.hs  Infra.hs  REPL.hs
src/XAlg/Foundation/: Core.hs  Focusing.hs  Parsing.hs  Recursion.hs
src/XAlg/Infra/: Analyze.hs  Logic.hs  PrettyPrinting.hs  Rewrite.hs
src/XAlg/Languages/: Arithmetic.hs
src/XAlg/Languages/Arithmetic/: Expr.hs  Laws.hs  Number.hs  Quotation.hs
test/: test-xalg.hs
